--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.437.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
@@ -35,6 +36,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-phone-input-2": "^2.15.1",
     "react-slick": "^0.30.2",
     "semantic-ui-react": "^2.1.5",
     "swiper": "^11.1.12",
@@ -45,6 +47,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.16.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
