--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "path": "^0.12.7",
     "prisma": "^5.19.0",
     "react": "^18",
     "react-country-flag": "^3.1.0",
