--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@tremor/react": "^3.18.3",
     "@types/stripe-v3": "^3.1.33",
     "bcryptjs": "^2.4.3",
-    "chart.js": "^4.4.5",
+    "chart.js": "2.9.3",
     "class-variance-authority": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.437.0",
@@ -44,6 +44,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
+    "react-random-reveal": "^2.0.1",
     "react-slick": "^0.30.2",
     "semantic-ui-react": "^2.1.5",
     "stripe": "^17.2.0",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@prisma/client": "^5.20.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/chart.js": "^2.9.41",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.16.3",
